# circular-reader

./: .travis.yml  Cargo.toml  README.md
examples/: basic.rs  for_loop.rs
src/: lib.rs
