[package]
name = "circular_reader"
version = "1.0.0"
authors = ["Phil <PhilboBaggins@users.noreply.github.com>"]
edition = "2018"
description = "Read from an iterator again and again and again..."
license = "MIT OR Apache-2.0"
repository = "https://github.com/PhilboBaggins/circular-reader"

[dependencies]

[dev-dependencies]
cargo-husky = "1"
